# imgrust

./: Cargo.toml  README.md
src/: compress.rs  files.rs  folder_organizer.rs  lib.rs  main.rs  organizer.rs
