[package]
name = "imgrust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
mozjpeg = "0.10.7"
rayon = "1.10.0"
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
