[package]
name = "imgrust"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
mozjpeg = "0.10.7"
rayon = "1.10.0"
indicatif = "0.17.8"
clap = { version = "4.5.6", features = ["derive"] }
kamadak-exif = "0.5.5"
img-parts = "=0.3.0"
colored = "2.1.0"
chrono = "0.4.38"
rexif = "0.7.4"
anyhow = "1.0.89"
path-clean = "1.0.1"
